@@ -824,7 +824,7 @@ void V2Reforms::modifierEffects(const EU3Country* srcCountry)
 	}
 }
 
-
+#pragma optimize("", off)
 V2UncivReforms::V2UncivReforms(int westernizationProgress, double milFocus, double socioEcoFocus, V2Country* country)
 {
 	int westernizationCost[16];
@@ -941,7 +941,7 @@ V2UncivReforms::V2UncivReforms(int westernizationProgress, double milFocus, doub
 		country->addTech("post_nelsonian_thought");
 	}
 }
-
+#pragma optimize("", on)
 
 void V2UncivReforms::output(FILE* output) const
 {
@@ -961,7 +961,7 @@ void V2UncivReforms::output(FILE* output) const
 		fprintf(output, "	admin_reform=no_admin_reform\n");
 	}
 
-	if (reforms[3]) {
+	if (reforms[3] && reforms[2]) {
 		fprintf(output, "	finance_reform=finance_reform_two\n");
 	}
 	else if (reforms[2]) {
